--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "absyro",
   "version": "1.0.0",
-  "description": "Absyro Company's Official Website",
   "private": true,
+  "description": "Absyro Company's Official Website",
+  "author": "Amir Farzamnia",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "format": "prettier public docs src -w -c"
   },
-  "author": "Amir Farzamnia",
-  "license": "Apache-2.0",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
@@ -32,9 +37,10 @@
   "bugs": {
     "url": "https://github.com/absyro/absyro-website/issues"
   },
+  "homepage": "https://github.com/absyro/absyro-website#readme",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/absyro/absyro-website.git"
-  },
-  "homepage": "https://github.com/absyro/absyro-website#readme"
+  }
 }
