--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "description": "Absyro Company's Official Website",
   "author": "Amir Farzamnia",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "format": "prettier public docs src -w -c"
+    "preinstall": "npm install pm2@latest -g",
+    "serve": "cd site && vue-cli-service serve",
+    "build": "cd site && vue-cli-service build",
+    "format": "prettier server.js docs site/public site/src -w -c"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
