--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#09090b",
-  "theme_color": "#1f1f1f",
+  "theme_color": "#131313",
   "icons": [
     {
       "src": "images/icons/icon-192x192.png",
