--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "absyro",
-  "version": "1.1.2",
+  "version": "1.1.5",
   "private": true,
   "description": "Absyro - Official Website",
   "author": "Absyro Company",
@@ -11,18 +11,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "pace-js": "^1.2.4",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1"
   },
@@ -33,12 +33,12 @@
     "not ie 11"
   ],
   "bugs": {
-    "url": "https://github.com/absyro/absyro-website/issues"
+    "url": "https://github.com/absyro/website/issues"
   },
-  "homepage": "https://github.com/absyro/absyro-website#readme",
+  "homepage": "https://github.com/absyro/website#readme",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/absyro/absyro-website.git"
+    "url": "https://github.com/absyro/website.git"
   }
 }
