Removed GitHub Pages

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,6 @@
     "jock.svg",
     "Vue.volar",
     "bradlc.vscode-tailwindcss",
-    "pranaygp.vscode-css-peek",
-    "github.vscode-github-actions"
+    "pranaygp.vscode-css-peek"
   ]
 }
