--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,3 @@
 {
-  "recommendations": [
-    "eamodio.gitlens",
-    "esbenp.prettier-vscode",
-    "yzhang.markdown-all-in-one",
-    "PKief.material-icon-theme",
-    "zh9528.file-size",
-    "redhat.vscode-yaml",
-    "jock.svg",
-    "Vue.volar",
-    "bradlc.vscode-tailwindcss",
-    "pranaygp.vscode-css-peek"
-  ]
+  "recommendations": ["eamodio.gitlens", "esbenp.prettier-vscode", "yzhang.markdown-all-in-one", "PKief.material-icon-theme", "zh9528.file-size", "redhat.vscode-yaml", "jock.svg", "Vue.volar", "bradlc.vscode-tailwindcss", "pranaygp.vscode-css-peek"]
 }
