--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "format": "prettier public src -w -c"
+    "format": "prettier **/** src -w -c"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
