--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/absyro/website.git"
+    "url": "git+https://github.com/absyro/website.git"
   }
 }
